--- a/VScode使用Markdown做笔记/数学公式支持.md
+++ b/VScode使用Markdown做笔记/数学公式支持.md
@@ -334,5 +334,44 @@ $$
   
 >点乘 $\cdot$ , 叉乘 $\times$ , 异或 $\otimes$ , 直和 $\oplus$ , 加减 $\pm$ , 复合 $\circ$
 
-* 小于等于 ```$\leq$```,大于等于 ```$\geq$```,不等 ```$\neq$```,恒等 ```$\equiv$```,越等 ```$\approx$```,等价 ```$\cong```,相似```$\sim$```,相似等于 ```$\simq$```,点等 ```$\doteq$```.
-* 
+* 小于等于 ```$\leq$```,大于等于 ```$\geq$```,不等 ```$\neq$```,恒等 ```$\equiv$```,约等 ```$\approx$```,等价 ```$\cong```,相似```$\sim$```,相似等于 ```$\simeq$```,点等 ```$\doteq$```.
+>小于等于 $\leq$ , 大于等于 $\geq$ , 不等 $\neq$ , 恒等 $\equiv$ , 约等 $\approx$ , 等价 $\cong$ , 相似 $\sim$ , 相似等于 $\simeq$ , 点等 $\doteq$
+
+* 逻辑与 ```$\land$```,逻辑或 ```$\lor$```,逻辑非 ```$\lnot```,蕴涵 ```$\to$```,等价 ```$\leftrightarrow```
+> 逻辑与 $\land$ , 逻辑或 $\lor$ , 逻辑非 $\lnot$ , 蕴涵 $\to$ , 等价 $\leftrightarrow$
+
+* 因为 ```$\because$```,所以 ```$\therefore$```,存在 ```$\exist$```,任意 ```$\forall$```.
+> 因为 $\because$ , 所以 $\therefore$ , 存在 $\exist$ , 任意 $\forall$
+
+* 左小箭头 ```$\leftarrow$```, 右小箭头 ```$\rightarrow$```,左大箭头 ```$\Leftarrow$```, 右大箭头 ```$\Rightarrow$```, 右长箭头 ```$\xrightarrow[fgh]{abcde}$```
+> 左小箭头 $\leftarrow$ , 右小箭头 $\rightarrow$ , 左大箭头 $\Leftarrow$ , 右大箭头 $\Rightarrow$ , 右长箭头 $\xrightarrow[fgh]{abcde}$.
+
+* 属于 ```$\in$```, 包含于 ```$\subset$```, 真包含于 ```$\subseteq$```, 交 ```$\cap$```, 并 ```$\cap$```, 空集 ```$\empty$```
+> 属于 $\in$ , 包含于 $\subset$ , 真包含于 $\subseteq$ , 交 $\cap$ , 并 $\cap$ , 空集 $\empty$
+
+* 短向量 ```$\vec{x}$```, 长向量 ```$\overrightarrow{AB}$```, 上横线 ```$\overline{P}$```.
+> 短向量 $\vec{x}$, 长向量 $\overrightarrow{AB}$, 上横线 $\overline{P}$
+
+* 无限 ```$\infty$```, 极限 ```$\lim$```, 微分 ```${\rm d}$```, 偏导 ```$\partial$```, 点求导 ```$\dot{y}$```, 点二阶导 ```$\ddot{y}$```, 变化量 ```$\Delta$```, 梯度 ```$\nabla$```.
+> 无限 $\infty$ , 极限 $\lim$ , 微分 ${\rm d}$, 偏导 $\partial$ , 点求导 $\dot{y}$ , 点二阶导 $\ddot{y}$ , 变化量 $\Delta$ , 梯度 $\nabla$
+
+* 省略号 ```$\cdots$```, 竖省略 ```$\vdots$```, 斜省略 ```$\ddots$```.
+> 省略号 $\cdots$ ， 竖省略 $\vdots$ , 斜省略 $\ddots$
+
+* 常见函数 ```$\sin$``` , ```$\cos$``` , ```$\tan$``` , ```$\arcsin$``` , ```$\arccos$``` , ```$\arctan$``` , ```$\arctan$``` , ```$\ln$``` , ```$\log$``` , ```$\exp$```
+> 常见函数 $\sin$ , $\cos$ , $\tan$ , $\arcsin$ , $\arccos$ , $\arctan$ , $\arctan$ , $\ln$ , $\log$ , $\exp$
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
